[gd_scene load_steps=13 format=3 uid="uid://c0nynw85dpm7d"]

[ext_resource type="Script" path="res://screen/GameMain/Index2D.gd" id="1_gu0ou"]
[ext_resource type="PackedScene" uid="uid://dock61r13thsd" path="res://node/ScreenAspectSprite.tscn" id="2_jj4yq"]
[ext_resource type="Shader" path="res://screen/GameMain/Index2D.BgForBg.gdshader" id="3_hooqs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ary6a"]
shader = ExtResource("3_hooqs")

[sub_resource type="Gradient" id="Gradient_ny3an"]
offsets = PackedFloat32Array(0, 0.00784314, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_ucl2m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.27451, 0.27451, 0.27451, 1)]
}

[sub_resource type="Animation" id="Animation_e28q8"]
resource_name = "kiai"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.368627, 0.368627, 0.368627, 1), Color(0.27451, 0.27451, 0.27451, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bxhp7"]
_data = {
"RESET": SubResource("Animation_ucl2m"),
"kiai": SubResource("Animation_e28q8")
}

[sub_resource type="Animation" id="Animation_umv5p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.27451, 0.27451, 0.27451, 1)]
}

[sub_resource type="Animation" id="Animation_8ekcu"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.27451, 0.27451, 0.27451, 1)]
}

[sub_resource type="Animation" id="Animation_a63vy"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.27451, 0.27451, 0.27451, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7w42d"]
_data = {
"RESET": SubResource("Animation_umv5p"),
"fade_in": SubResource("Animation_8ekcu"),
"fade_out": SubResource("Animation_a63vy")
}

[node name="Index2d" type="Node2D"]
script = ExtResource("1_gu0ou")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="BgForBg" parent="." instance=ExtResource("2_jj4yq")]
material = SubResource("ShaderMaterial_ary6a")
base_scale = Vector2(2, 2)

[node name="Background" parent="." instance=ExtResource("2_jj4yq")]
modulate = Color(0.27451, 0.27451, 0.27451, 1)

[node name="ParticlesLeft" type="CPUParticles2D" parent="."]
emitting = false
amount = 1200
one_shot = true
lifetime_randomness = 1.0
direction = Vector2(1, -1)
spread = 15.0
gravity = Vector2(0, 300)
initial_velocity_min = 500.0
initial_velocity_max = 800.0
scale_amount_min = 5.0
scale_amount_max = 10.0
color = Color(1, 1, 1, 0.501961)
color_ramp = SubResource("Gradient_ny3an")
metadata/_edit_lock_ = true

[node name="ParticlesRight" type="CPUParticles2D" parent="."]
emitting = false
amount = 1200
one_shot = true
lifetime_randomness = 1.0
direction = Vector2(-1, -1)
spread = 15.0
gravity = Vector2(0, 300)
initial_velocity_min = 500.0
initial_velocity_max = 800.0
scale_amount_min = 5.0
scale_amount_max = 10.0
color = Color(1, 1, 1, 0.501961)
color_ramp = SubResource("Gradient_ny3an")
metadata/_edit_lock_ = true

[node name="KiaiModeBeat" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bxhp7")
}

[node name="BreakAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7w42d")
}
